# data_transformation

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  .user.yml  Dockerfile  Makefile  README.md  dbt_project.yml  docker-compose.yml  env.example  lambda_handler.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements.txt  run-dbt.sh  setup.cfg
.github/: BRANCH_PROTECTION_SETUP.md  CI_CD_GUIDE.md
.github/actions/detect-environment/: action.yml
.github/actions/handle-results/: action.yml
.github/actions/quality-checks/: action.yml
.github/actions/setup-complete/: action.yml
.github/actions/setup-dbt/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  deploy.yml  pull-request.yml  security.yml
deploy/: deploy.sh  ecr-setup.sh  lambda-setup.sh
deploy/terraform/: README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
models/marts/: .gitkeep  schema.yml
models/staging/: connection_test.sql  schema.yml
profiles/: .user.yml  profiles.yml
scripts/: __init__.py  dbt_commands.py  docker_manager.py  environment_manager.py  linting.py  setup.py  utils.py
seeds/: .gitkeep
